Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/T4695348.out
T4695348.java:11:12: compiler.err.non-static.cant.be.ref: kindname.type.variable, T
1 error
